<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home_menu_title"/>

    <item
        android:id="@+id/productFragment"
        android:icon="@drawable/ic_product"
        android:title="@string/product_menu_title"/>

    <item
        android:id="@+id/reportFragment"
        android:icon="@drawable/ic_report"
        android:title="@string/report_menu_title"/>

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification_menu_text"/>

    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_account"
        android:title="@string/account_menu_title"/>

</menu>